[package]
name = "steel-cli-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.steel-cli]
path = ".."

[dependencies.steel-core]
path = "../crates/steel-core"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "steel-fuzz"
path = "fuzz_targets/steel-fuzz.rs"
test = false
doc = false
